# libft

./: .gitmodules  CMakeLists.txt  Makefile  ft_atoi.c  ft_list.h  ft_lstdelone.c  ft_lstgetelem.c  ft_lstinsert.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_nbrlen.c  ft_putchar.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_strcmp.c  ft_strdel.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncmp.c  ft_strnequ.c  ft_strnew.c  ft_strsplit.c  ft_strsub.c  ft_wchar.h  ft_wcharlen.c  ft_wchartochar.c  libft.h
include/: libft.h
src/: ft_atoi.c  ft_bzero.c  ft_lstadd.c  ft_lstdup.c  ft_lstdupelem.c  ft_lstfind.c  ft_lstfreeelem.c  ft_lstfreelist.c  ft_lstgetelem.c  ft_lstgetlast.c  ft_lstinsert.c  ft_lstisinlist.c  ft_lstiter.c  ft_lstlen.c  ft_lstnew.c  ft_lstpushback.c  ft_lstpushfront.c  ft_lstremoveelem.c  ft_lstswap.c  ft_memchr.c  ft_power.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_realloc.c  ft_strtrim.c  ft_wcharlen.c  ft_wchartochar.c
